# oracle-price-feeder

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Compile.Dockerfile  Containerfile  Dispatcher.Dockerfile  Feeder.Dockerfile  README.md  alarms-dispatcher.dev.toml  alarms-dispatcher.test.toml  alarms-dispatcher.toml  compiling_docker  market-data-feeder.dev.toml  market-data-feeder.main.toml  market-data-feeder.test.toml  market-data-feeder.toml  runnable_docker  rustfmt.toml
.cargo/: audit.toml
alarms-dispatcher/: Cargo.toml  build.rs
alarms-dispatcher/src/: account.rs  client.rs  config.rs  configuration.rs  error.rs  generators.rs  lib.rs  log.rs  main.rs  messages.rs  signer.rs  tx.rs
alarms-dispatcher/src/account/: error.rs  mod.rs
alarms-dispatcher/src/client/: error.rs  mod.rs
alarms-dispatcher/src/configuration/: error.rs  mod.rs
alarms-dispatcher/src/signer/: error.rs
alarms-dispatcher/src/tx/: error.rs  mod.rs
applications/alarms-dispatcher/: Cargo.toml
applications/alarms-dispatcher/src/: main.rs  task.rs
applications/alarms-dispatcher/src/task/: alarms_generator.rs  mod.rs
applications/market-data-feeder/: Cargo.toml
applications/market-data-feeder/src/: dex_node_grpc_var.rs  error_handler.rs  id.rs  main.rs  oracle.rs  state.rs  task.rs
applications/market-data-feeder/src/state/: mod.rs  price_fetcher.rs
applications/market-data-feeder/src/task/: id.rs  mod.rs  provider.rs
broadcast/: Cargo.toml
broadcast/src/: broadcast.rs  config.rs  error.rs  generators.rs  lib.rs  log.rs  preprocess.rs
broadcast/src/cache/: mod.rs  sealed.rs
broadcast/src/impl_variant/: mod.rs
broadcast/src/mode/: mod.rs  sealed.rs
chain-comms/: Cargo.toml
chain-comms/src/: lib.rs  log.rs
chain-comms/src/account/: error.rs  mod.rs
chain-comms/src/build_tx/: error.rs  mod.rs
chain-comms/src/client/: error.rs  mod.rs
chain-comms/src/config/: error.rs  mod.rs
chain-comms/src/decode/: error.rs  mod.rs
chain-comms/src/interact/: error.rs  mod.rs
chain-comms/src/interact/commit/: error.rs  mod.rs
chain-comms/src/interact/get_tx_response/: error.rs  mod.rs
chain-comms/src/interact/healthcheck/: error.rs  mod.rs
chain-comms/src/interact/query/: error.rs  mod.rs
chain-comms/src/interact/simulate/: error.rs  mod.rs
chain-comms/src/rpc_setup/: error.rs  mod.rs
chain-comms/src/signer/: error.rs  mod.rs
chain-comms/src/signing_key/: error.rs  mod.rs
chain-ops/: Cargo.toml
chain-ops/src/: defer.rs  key.rs  lib.rs  log.rs  macros.rs  run.rs  signer.rs  task_set.rs
chain-ops/src/channel/: bounded.rs  unbounded.rs
chain-ops/src/contract/: mod.rs
chain-ops/src/node/: mod.rs  query_auth.rs  query_bank.rs  query_tx.rs
chain-ops/src/service/: mod.rs
chain-ops/src/supervisor/: configuration.rs  mod.rs
chain-ops/src/task/: application_defined.rs  balance_reporter.rs  broadcast.rs  mod.rs  protocol_watcher.rs
chain-ops/tests/supervisor/: application_defined.rs  builtin_tasks.rs  main.rs
crates/chain-ops/: Cargo.toml
crates/chain-ops/src/contract/: admin.rs  mod.rs
crates/chain-ops/src/service/: mod.rs  task_spawner.rs
crates/chain-ops/src/supervisor/: configuration.rs  mod.rs
crates/services/alarms-dispatcher/: Cargo.toml
crates/services/alarms-dispatcher/src/: main.rs
crates/services/alarms-dispatcher/src/task/: alarms_generator.rs  mod.rs
crates/services/market-data-feeder/: Cargo.toml
crates/services/market-data-feeder/src/: lib.rs  oracle.rs  provider.rs
crates/services/market-data-feeder/src/task/: context.rs  id.rs  mod.rs  provider.rs
libraries/balance-reporter/: Cargo.toml
libraries/balance-reporter/src/: lib.rs
libraries/broadcaster/: Cargo.toml
libraries/broadcaster/src/: lib.rs
libraries/contract/: Cargo.toml
libraries/contract/src/: lib.rs
libraries/protocol-watcher/: Cargo.toml
libraries/protocol-watcher/src/: lib.rs
libraries/service/: Cargo.toml
libraries/service/src/: run.rs
libraries/service/src/service/: task_spawner.rs
libraries/service/src/supervisor/: configuration.rs  mod.rs
libraries/service/src/task/: balance_reporter.rs  mod.rs  protocol_watcher.rs
libraries/service/tests/supervisor/: application_defined.rs  builtin_tasks.rs
libraries/supervisor/: Cargo.toml
libraries/supervisor/src/: configuration.rs  lib.rs  log.rs
market-data-feeder/: Cargo.toml  build.rs
market-data-feeder/src/: config.rs  deviation.rs  error.rs  lib.rs  log.rs  main.rs  messages.rs  oracle.rs  price.rs  provider.rs  result.rs  workers.rs
market-data-feeder/src/config/: comparison_providers.rs  currencies.rs  mod.rs  providers.rs  raw.rs  str_pool.rs
market-data-feeder/src/config/currencies/: mod.rs  serde.rs
market-data-feeder/src/cosmos/: client.rs  json.rs  mod.rs  tx.rs  wallet.rs
market-data-feeder/src/provider/: error.rs  mod.rs
market-data-feeder/src/provider/base/: errors.rs  mod.rs  provider.rs
market-data-feeder/src/provider/crypto/: osmosis.rs  provider.rs
market-data-feeder/src/providers/: astroport.rs  coin_gecko.rs  mod.rs  osmosis.rs
market-data-feeder/src/task/: id.rs  mod.rs  provider.rs
market-data-feeder/src/tests/: integration.rs  integration_dev_network.rs  mod.rs
market-data-feeder/src/workers/: mod.rs  print_prices_pretty.rs
nolus-dispatch-bot/: Cargo.toml
nolus-dispatch-bot/src/: account.rs  client.rs  configuration.rs  error.rs  main.rs  messages.rs  signing.rs  tx.rs
platform/: Cargo.toml
platform/src/: error.rs  lib.rs
services/market-data-feeder/: Cargo.toml
services/market-data-feeder/src/: lib.rs  main.rs  oracle.rs  provider.rs
services/market-data-feeder/src/providers/: bound_checked.rs  mod.rs
services/market-data-feeder/src/providers/astroport/: mod.rs
services/market-data-feeder/src/providers/osmosis/: mod.rs  sealed.rs
services/market-data-feeder/src/task/: context.rs  id.rs  mod.rs  provider.rs
src/: env.rs  (+11 more)
test-encoding-compatibility/: Cargo.toml
test-encoding-compatibility/src/: lib.rs
test-encoding-compatibility/tests/: astroport.rs  osmosis.rs
tests/encoding-compatibility/: Cargo.toml
(+110 files in other folders)
