[workspace]
resolver = "2"
members = ["./**/src/.."]
exclude = [
    "./target/**",
    "./test-encoding-compatibility",
]

[workspace.package]
version = "0.64.1"
edition = "2021"
rust-version = "1.80.0"

[workspace.dependencies.chain-ops]
path = "./chain-ops"

[workspace.dependencies.market-data-feeder]
path = "./services/market-data-feeder"

[workspace.dependencies]
bip32 = "0.5.2"
bnum = "0.11.0"
data-encoding = "2.6.0"
fraction = "0.15.3"
serde-json-wasm = "1.0.1"
thiserror = "1.0.63"
tracing-appender = "0.2.3"

[workspace.dependencies.anyhow]
version = "1.0.86"
default-features = false
features = ["std"]

[workspace.dependencies.chrono]
version = "0.4.38"
default-features = false
features = ["now"]

[workspace.dependencies.cosmrs]
version = "0.19.0"
default-features = false
features = [
    "bip32",
    "cosmwasm",
    "grpc",
]

[workspace.dependencies.proptest]
version = "1.5.0"
default-features = false
features = [
    "attr-macro",
    "bit-set",
    "fork",
    "std",
    "tempfile",
]

[workspace.dependencies.prost]
version = "0.13.1"
default-features = false
features = ["derive", "std"]

[workspace.dependencies.serde]
version = "1.0.207"
default-features = false
features = [
    "derive",
    "rc",
    "std",
]

[workspace.dependencies.tokio]
version = "1.39.2"
default-features = false
features = [
    "io-util",
    "macros",
    "parking_lot",
    "rt-multi-thread",
    "signal",
    "sync",
]

[workspace.dependencies.tonic]
version = "0.12.1"
default-features = false
features = [
    "channel",
    "gzip",
    "prost",
    "tls-webpki-roots",
    "zstd",
]

[workspace.dependencies.tracing]
version = "0.1.40"
default-features = false
features = [
    "max_level_debug",
    "release_max_level_info",
]

[workspace.dependencies.tracing-subscriber]
version = "0.3.18"
default-features = false
features = [
    "alloc",
    "ansi",
    "fmt",
    "json",
    "std",
    "parking_lot",
]

[workspace.dependencies.url]
version = "2.5.2"
default-features = false

[workspace.dependencies.zeroize]
version = "1.8.1"
features = ["std"]

[profile.release]
codegen-units = 1
incremental = false
lto = true
opt-level = 3
overflow-checks = true
rpath = false

[profile.release.build-override]
codegen-units = 1
incremental = false
opt-level = 3
overflow-checks = true
