[workspace]
resolver = "2"

members = ["**/src/.."]
exclude = ["target/**"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
broadcast = { path = "./broadcast" }
chain-comms = { path = "./chain-comms" }
logging = { path = "./logging" }
platform = { path = "./platform" }

astroport = "3.12.2"
async-trait = "0.1.80"
bip32 = "0.5.1"
bnum = "0.11.0"
bytes = "1.6.0"
cosmrs = { version = "0.16.0", default-features = false, features = [
    "rpc",
    "grpc",
    "bip32",
    "cosmwasm",
] }
data-encoding = "2.6.0"
futures = { version = "0.3.30", default-features = false }
osmosis-std = "0.24.0"
prost = "0.12.4"
prost-types = "0.12.4"
regex = "1.10.4"
reqwest = { version = "0.12.4", default-features = false, features = [
    "json",
    "rustls-tls",
] }
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.201", default-features = false, features = ["derive"] }
serde-json-wasm = "1.0.1"
time = { version = "0.3.36", default-features = false, features = [
    "std",
    "formatting",
] }
thiserror = "1.0.60"
tokio = { version = "1.37.0", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
toml = "0.8.12"
tonic = { version = "=0.11.0", default-features = false, features = [
    "tls",
    "tls-roots",
    "gzip",
] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
url = { version = "2.5.0", default-features = false }

[profile.dev.build-override]
debug = false
opt-level = 3

[profile.release]
codegen-units = 1
overflow-checks = true
lto = "fat"

[profile.release.build-override]
opt-level = 3
