[workspace]
resolver = "2"
members = ["./crates/*/**/src/.."]

[workspace.package]
version = "0.65.0"
edition = "2021"
rust-version = "1.83.0"

[workspace.dependencies.chain-ops]
path = "./crates/chain-ops"

[workspace.dependencies]
bip32 = "0.5.2"
data-encoding = "2.8.0"
fraction = "0.15.3"
serde-json-wasm = "1.0.1"
thiserror = "2.0.11"

[workspace.dependencies.anyhow]
version = "1.0.95"
default-features = false
features = ["std"]

[workspace.dependencies.chrono]
version = "0.4.39"
default-features = false
features = ["now"]

[workspace.dependencies.cosmrs]
version = "0.21.1"
default-features = false
features = [
    "bip32",
    "cosmwasm",
    "grpc",
]

[workspace.dependencies.proptest]
version = "1.6.0"
default-features = false
features = [
    "attr-macro",
    "bit-set",
    "fork",
    "std",
    "tempfile",
]

[workspace.dependencies.prost]
version = "0.13.5"
default-features = false
features = ["derive", "std"]

[workspace.dependencies.serde]
version = "1.0.217"
default-features = false
features = [
    "derive",
    "rc",
    "std",
]

[workspace.dependencies.tokio]
version = "1.43.0"
default-features = false
features = [
    "io-util",
    "macros",
    "parking_lot",
    "rt-multi-thread",
    "signal",
    "sync",
]

[workspace.dependencies.tonic]
version = "0.12.3"
default-features = false
features = [
    "channel",
    "gzip",
    "prost",
    "tls-webpki-roots",
    "zstd",
]

[workspace.dependencies.tracing]
version = "0.1.41"
default-features = false
features = [
    "max_level_debug",
    "release_max_level_info",
]

[workspace.dependencies.tracing-subscriber]
version = "0.3.19"
default-features = false
features = [
    "alloc",
    "ansi",
    "fmt",
    "json",
    "std",
    "parking_lot",
]

[workspace.dependencies.zeroize]
version = "1.8.1"
features = ["std"]

[workspace.lints.rust]
unexpected_cfgs = "forbid"
unsafe_code = "forbid"
warnings = "deny"

[workspace.lints.clippy]
missing_errors_doc = "allow"

[workspace.lints.clippy.pedantic]
priority = -1
level = "deny"

[profile.release]
codegen-units = 1
incremental = false
lto = true
opt-level = 3
overflow-checks = true
rpath = false

[profile.release.build-override]
codegen-units = 1
incremental = false
opt-level = 3
overflow-checks = true
