[package]
name = "alarms-dispatcher"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
semver = { workspace = true }
chain-comms = { workspace = true }

base64 = "0.21"
prost = "0.11.6"
serde = { version = "1", features = ["derive"] }
serde-json-wasm = "0.5"
thiserror = "1"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "io-std", "io-util", "time", "fs"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"

[build-dependencies]
time = { version = "0.3.17", default-features = false, features = ["std", "formatting"] }
