[package]
name = "broadcast"
version = "0.0.0"
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chain-comms.workspace = true

serde = { workspace = true, default-features = false, features = ["derive"] }
serde-json-wasm.workspace = true
thiserror.workspace = true
tokio = { workspace = true, default-features = false, features = ["rt", "sync", "time"] }
tracing.workspace = true
