[package]
name = "broadcast"
version = "0.0.0"
rust-version = "1.76"
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chain-comms.workspace = true
logging.workspace = true

serde = { workspace = true, default-features = false, features = ["derive"] }
serde-json-wasm.workspace = true
thiserror.workspace = true
tokio = { workspace = true, default-features = false, features = ["rt", "signal", "sync", "time"] }
tracing.workspace = true
