[package]
name = "chain-comms"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmrs = { version = "0.14", default-features = false, features = ["rpc", "grpc", "bip32", "cosmwasm"] }
base64 = "0.21.4"
http = { version = "0.2.9", default-features = false }
thiserror = "1"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "io-std", "io-util", "time", "fs"] }
toml = "0.7.8"
tonic = { version = "0.9.2", default_features = false, features = ["tls", "tls-roots", "gzip"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
serde = { version = "1", features = ["derive"] }
serde-json-wasm = "1"
