[package]
name = "chain-comms"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = { workspace = true }
cosmrs = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde-json-wasm = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-std", "io-util", "time", "fs"] }
toml = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
