[package]
name = "chain-ops"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
bip32.workspace = true
chrono.workspace = true
cosmrs.workspace = true
data-encoding.workspace = true
prost.workspace = true
serde.workspace = true
serde-json-wasm.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
zeroize.workspace = true

[dev-dependencies.tokio]
workspace = true
features = ["test-util"]
