[package]
name = "market-data-feeder"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version = "1.75.0"

[[bin]]
path = "src/main.rs"
name = "feeder"

[dependencies]
chain-comms = { workspace = true }

astroport.workspace = true
async-trait.workspace = true
bnum.workspace = true
bytes.workspace = true
futures.workspace = true
http.workspace = true
osmosis-std.workspace = true
regex.workspace = true
reqwest.workspace = true
semver.workspace = true
serde.workspace = true
serde-json-wasm.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "signal"] }
toml.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[build-dependencies]
time.workspace = true
