[package]
name = "nolus-dispatch-bot"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
market-data-feeder = { path = "../market-data-feeder" }

anyhow = "1"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "io-std", "fs"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

serde = { version = "1", features = ["derive"] }
serde-json-wasm = "0.4.1"
toml = "0.5"