[package]
name = "platform"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chain-comms.workspace = true

serde.workspace = true
serde-json-wasm.workspace = true
thiserror.workspace = true
