[package]
name = "test-encoding-compatibility"
version = "0.0.0"
edition = "2021"
rust-version = "1.83.0"

autobins = false

[lints.rust]
unexpected_cfgs = "forbid"
unsafe_code = "forbid"
warnings = "deny"

[lints.clippy]
missing_errors_doc = "allow"

[lints.clippy.pedantic]
priority = -1
level = "deny"

[dev-dependencies.market-data-feeder]
path = "../services/market-data-feeder"

################################################################################

[dev-dependencies.astroport]
version = "5.5.0"
default-features = false

[dev-dependencies.osmosis-std]
version = "0.27.0"
default-features = false

[dev-dependencies.prost]
version = "0.13.4"
default-features = false
features = ["std"]

[dev-dependencies.serde-json-wasm]
version = "1.0.1"
default-features = false
features = ["std"]
