[workspace]
resolver = "3"

[package]
name = "test-encoding-compatibility"
version = "0.0.0"
edition = "2024"
rust-version = "1.85.0"

autobins = false

[lints.rust]
unexpected_cfgs = "forbid"
unsafe_code = "forbid"
warnings = "deny"

[lints.clippy]
missing_errors_doc = "allow"

[lints.clippy.pedantic]
priority = -1
level = "deny"

[dev-dependencies.dex]
path = "../libraries/dex"

################################################################################

[dev-dependencies.astroport]
version = "5.7.0-cw1.0"
default-features = false

[dev-dependencies.osmosis-std]
version = "0.27.0"
default-features = false

[dev-dependencies.prost]
version = "0.13.5"
default-features = false
features = ["std"]

[dev-dependencies.serde-json-wasm]
version = "1.0.1"
default-features = false
features = ["std"]
