[package]
name = "alarms-dispatcher"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
chain-ops.workspace = true
channel.workspace = true
contract.workspace = true
environment.workspace = true
semver.workspace = true
service.workspace = true

anyhow.workspace = true
cosmrs.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true

[dev-dependencies.tokio]
version = "1.38.0"
features = ["test-util"]
