[package]
name = "alarms-dispatcher"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
balance-reporter.workspace = true
broadcaster.workspace = true
chain-ops.workspace = true
channel.workspace = true
contract.workspace = true
defer.workspace = true
dex.workspace = true
environment.workspace = true
log.workspace = true
protocol-watcher.workspace = true
serde-json-wasm.workspace = true
service.workspace = true
supervisor.workspace = true
task.workspace = true
task_set.workspace = true
tx.workspace = true

anyhow.workspace = true
cosmrs.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true

[dev-dependencies.tokio]
version = "1.38.0"
features = ["test-util"]
