[package]
name = "chain-ops"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
environment.workspace = true

anyhow.workspace = true
bip32.workspace = true
cosmrs.workspace = true
data-encoding.workspace = true
prost.workspace = true
serde.workspace = true
serde-json-wasm.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true

[dev-dependencies.tokio]
workspace = true
features = ["test-util"]

[lints]
workspace = true
