[package]
name = "broadcaster"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
chain-ops.workspace = true
channel.workspace = true
environment.workspace = true
task.workspace = true
tx.workspace = true

anyhow.workspace = true
cosmrs.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
