[package]
name = "contract"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
chain-ops.workspace = true
dex.workspace = true
semver.workspace = true

anyhow.workspace = true
serde.workspace = true
serde-json-wasm.workspace = true

[lints]
workspace = true
