[package]
name = "protocol-watcher"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
channel.workspace = true
contract.workspace = true
task.workspace = true
task_set.workspace = true
tx.workspace = true

anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
