[package]
name = "supervisor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
chain-ops.workspace = true
channel.workspace = true
contract.workspace = true
environment.workspace = true
task_set.workspace = true

anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
zeroize.workspace = true

[lints]
workspace = true
