[package]
name = "market-data-feeder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
chain-ops.workspace = true

anyhow.workspace = true
cosmrs.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
serde.workspace = true
serde-json-wasm.workspace = true
prost.workspace = true

[dev-dependencies]
fraction.workspace = true
proptest.workspace = true
