[package]
name = "protobuf-compatibility"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

autobins = false

[dev-dependencies]
market-data-feeder.workspace = true

astroport.workspace = true
osmosis-std.workspace = true
prost.workspace = true
prost_0_12.workspace = true
serde-json-wasm.workspace = true
