[package]
name = "market-data-feeder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
chain-ops.workspace = true
channel.workspace = true
contract.workspace = true
defer.workspace = true
dex.workspace = true
environment.workspace = true
oracle.workspace = true
service.workspace = true
task_set.workspace = true

anyhow.workspace = true
cosmrs.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true

[lints]
workspace = true
